apps/annugame/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annugame
  namespace: default
  labels:
    app: annugame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: annugame
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: annugame
      labels:
        app: annugame
    spec:
      containers:
        - name: annugame69
          image: ghcr.io/wisvch/annu-game-69:20260602-a57018e # {"$imagepolicy": "flux-system:annugame"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources: # typical usage cpu: 0.0006, mem: 3.2MiB
            limits:
              cpu: 5m
              memory: 16Mi
        - name: annugame-leaderboard
          image: ghcr.io/wisvch/annugame-leaderboard:20260602-a60beb7 # {"$imagepolicy": "flux-system:annugame-leaderboard"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: backend
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/
              port: backend
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/
              port: backend
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources: # typical usage cpu: 0.0005, mem: 24MiB
            limits:
              cpu: 5m
              memory: 48Mi
          volumeMounts:
            - mountPath: /db
              name: annugame-data
      volumes:
        - name: annugame-data
          persistentVolumeClaim:
            claimName: annugame-disk
