apps/annugame/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: annugame
  name: annugame
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: annugame
  sessionAffinity: None
  type: ClusterIP
